--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="app">
         <div class='navbar' id="mainNav">
             <div class="logo">
-                <img src="images/logo.jpg" alt="HeartFlux Logo">
+                <img src="images/logo.JPG" alt="HeartFlux Logo">
             </div>
             <div class="nav-links">
                 <a href="#">MAIN PAGE</a>
